opam-version: "2.0"
name: "httph"
version: "0.1"
synopsis: "Minimal OCaml to the httpserver.h http server toolkit"
description: """
Longer description
"""
maintainer: "Travis Brady <travis.brady@gmail.com>"
authors: "Travis Brady <travis.brady@gmail.com>"
license: "MIT"
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" ]
build: [
  ["./configure" "--prefix=%{prefix}%"]
  [make]
]
install: [make "install"]
